- -> Removed
! -> Note

03-Feb-2010 Hannes Papenberg
# Fixed bug in JTable::reset() that don't properly reset the values - Thanks Jonnathan!
^ Changed JTable::__construct() to create the properties with their default values from the table - Thanks Jonnathan!
^ Changed queries of all plugins to use JQuery - Thanks Dejan Acman!
^ Changed queries of all modules to use JQuery - Thanks Omar!

02-Feb-2010 Hannes Papenberg
# - fixed category parameter in mod_latest - Thanks Jonnathan!
^ - Changed mod_popular to use the contentModelArticles - Thanks Jonnathan!
# - Fixed the link to edit an article in mod_popular - Thanks Jonnathan!
+ - Added parameters to mod_popular - Thanks Jonnathan!
$ - Fixed languages strings for mod_popular - Thanks Jonnathan!

02-Feb-2010 Jean-Marie Simonet 
^ Customized enabled/published ini keys/values for modules and plugins
^ Refactored ini keys in authentication plugins

01-Feb-2010 Mark Dexter
# Fix menu settings in sample data (Elin Waring)

01-Feb-2010 Christophe Demko
^ Save the featured state in the article edit view
# Corrected a bug in installation joomla.sql file
# Corrected parse_ini_file for php version >= 5.3.0 (does not deal correctly with _QQ_ defined constant)

01-Feb-2010 Hannes Papenberg
# Fixed com_search router and model
# Fixed com_search view
# Fixed routing in content search plugins

01-Feb-2010 Jean-Marie Simonet 
^ Refactored com_plugins ini keys + some
^ Refactored (again ;) ) tinymce ini keys to standard
^ Refactored ini keys in content plugins + some

31-Jan-2010 Hannes Papenberg
# Fixed group bug in JParameter - Thanks James Kennard
- Removing unused images from administrator, including the /images folder
# Fixing routing of JHTML::image()
# Fixed notice in com_content router
+ Added $path_only option to JHTML::image()
# Fixed bug in how com_languages saves the configuration options - Thanks Jonnathan!
# When module were renamed, the translation files weren't renamed, too.